--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "kpserver",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {},
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "chalk": "^4.0.0",
-    "file-type": "^17.1.1"
+    "chalk": "^4.0.0"
   }
 }
